<package format="2">
  <name>adrc_control</name>
  <version>1.0.0</version>
  <description>adrc control package</description>

  <maintainer email="lkw_nuaa@163.com">lkw</maintainer>

  <author>lkw</author>

  <license>  BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>roscpp</depend>

</package>
